--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1251,23 +1251,31 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
 
 
 
-   #general_page article {
+   #manage article {
      float: left;
      display: flex;
      flex-direction: column;
-     justify-content: center;
+     justify-content: flex-start;
      align-items: center;
      width: 95%;
      padding-top: 5vh;
-     height: 80vh;
+     padding: 1%;
      background: #fbfbf2;
      background-repeat: no-repeat;
      background-size: 200%;
      background-position: 10% 30%;
      margin-bottom: 5%;
-     overflow: auto;
+     /* overflow: auto; */
      box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
      /* border: 1px solid black; */
+   }
+
+
+   #manage table th, td {
+    padding: 1%;
+    width: 5%;
+    text-align: center;
+    
    }
 
    /* footer font size adjust for requirement */
@@ -1398,3 +1406,13 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
    background-color: #f2f2f2;
    text-align: left;
  }
+
+ .no_button_style {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
