--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,9 @@
  /*
 filename: styles.css
-author: Nguyen Ha Huy Hoang, Nguyen Duc Thinh, Nguyen Gia Binh, Nguyen Manh Duc
+author: Nguyen Ha Huy Hoang, Nguyen Duc Thinh, Nguyen Gia Binh
 created: 14/2/2023
 last modified: 1/3/2023
-description: product.html, index.html, enquire.html, about.html, enhancements.html
+description: product.php, index.php, payment.php, about.php, enhancements.php
 */
 
 
@@ -537,7 +537,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
    }
 
    /* Form size and color   */
-   #enquire .form {
+   #payment .form {
      padding: 5%;
      background: #fff;
      width: 95%;
@@ -546,7 +546,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
        rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
    }
 
-   #enquire .form h2 {
+   #payment .form h2 {
      font-size: 2.5vw;
      text-align: center;
      font-weight: bold;
@@ -557,29 +557,29 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
    }
 
    /* Contact us heading at the start   */
-   #enquire #heading {
+   #payment #heading {
      text-align: center;
      font: 5em Arial;
      margin: 0% 0% 5% 0%;
    }
 
    /* How to fieldset behave   */
-   #enquire fieldset {
+   #payment fieldset {
      padding: 0px;
    }
 
    /* Make the border representing fieldset dissapear   */
-   #enquire .part {
+   #payment .part {
      border-style: none;
    }
 
    /* border radius for form elements */
-   #enquire fieldset input {
+   #payment fieldset input {
      border-radius: 10px;
    }
 
    /* State styling   */
-   #enquire #cAdr {
+   #payment #cAdr {
      width: 100%;
      padding: 1.5em;
      border-radius: 10px;
@@ -588,18 +588,18 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
    }
 
    /* The text over each input is style here   */
-   #enquire .text_Float_left {
+   #payment .text_Float_left {
      float: left;
      font-size: 1.7em;
    }
 
    /* Increase font-size of placeholder   */
-   #enquire input::placeholder {
+   #payment input::placeholder {
      font-size: 1.4em;
    }
 
    /* Set the input field to look kinda opaque    */
-   #enquire .input_text {
+   #payment .input_text {
 
      width: 5%;
 
@@ -610,7 +610,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
    }
 
    /* setting for the first personal detail section */
-   #enquire .input_text_2 {
+   #payment .input_text_2 {
      opacity: 0.5;
      width: 100%;
      padding: 1.5em;
@@ -618,64 +618,64 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
      margin-bottom: 2%;
    }
 
-   #enquire .quantity_align {
+   #payment .quantity_align {
      margin-left: 4%;
    }
 
 
 
    /* Testing table */
-   #enquire table,
+   #payment table,
    th,
    td {
      border: 1px solid black;
    }
 
-   #enquire table th {
+   #payment table th {
      background-color: lightgrey;
    }
 
-   #enquire table tr td {
+   #payment table tr td {
      height: 90px;
      padding: 1%;
    }
 
-   #enquire table .header_product_1 {
+   #payment table .header_product_1 {
      width: 75%;
      font-size: 2em;
 
    }
 
-   #enquire table .header_product_2 {
+   #payment table .header_product_2 {
      width: 10%;
      font-size: 2em;
 
    }
 
-   #enquire table .header_product_3 {
+   #payment table .header_product_3 {
      width: 14%;
      font-size: 2em;
      padding: 1%;
 
    }
 
-   #enquire .actual_product {
+   #payment .actual_product {
      font-size: 1.5em;
    }
 
-   #enquire .actual_product_2 {
+   #payment .actual_product_2 {
      font-size: 1.5em;
      text-align: center;
    }
 
    /*2 equal collums*/
 
-   #enquire * {
+   #payment * {
      box-sizing: border-box;
    }
 
    /* Create two equal columns that floats next to each other */
-   #enquire .column {
+   #payment .column {
      float: left;
      width: 49%;
      margin: 1% 0% 0% 0%;
@@ -683,7 +683,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
    }
 
    /* setting for elements on the right */
-   #enquire .column2 {
+   #payment .column2 {
      float: left;
      width: 49%;
      margin: 1% 0% 0% 1.9%;
@@ -691,29 +691,29 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
    }
 
    /* Clear floats after the columns */
-   #enquire .row_01:after {
+   #payment .row_01:after {
      content: "";
      display: table;
      clear: both;
    }
 
    /* separate row 2 and 1 */
-   #enquire .row2 {
+   #payment .row2 {
      margin-bottom: 1%;
    }
 
-   #enquire .row2:after {
+   #payment .row2:after {
      content: "";
      display: table;
      clear: both;
    }
 
    /* Preferred Card type */
-   #enquire .precon_label {
+   #payment .precon_label {
      padding-right: 2%;
    }
 
-   #enquire .book {
+   #payment .book {
      width: 33%;
      padding: 0.5em;
      border-radius: 10px;
@@ -722,47 +722,47 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
 
    }
 
-   #enquire .select_test {
+   #payment .select_test {
      width: 100%;
    }
 
    /* attribute selector for all type ratio => adjust the ratio size */
-   #enquire input[type="radio"] {
+   #payment input[type="radio"] {
      transform: scale(1.5);
    }
 
    /* add display flex */
-   #enquire .flex {
+   #payment .flex {
      display: flex;
      flex-direction: column;
    }
 
    /* position adjustment for prefered Card */
-   #enquire .option_content {
+   #payment .option_content {
      display: flex;
      margin-top: 2%;
    }
 
    /* Book, preferred, order font styling    */
-   #enquire .choice_label {
+   #payment .choice_label {
      font-size: 1.7em;
    }
 
    /* adjust the position of the label content */
-   #enquire li label {
+   #payment li label {
      display: flex;
      align-items: center;
    }
 
    /* Choose order type styling   */
-   #enquire ul {
+   #payment ul {
      display: flex;
      margin: 2% 0% 0% 0%;
      padding: 0px;
    }
 
    /* checkbox option position settings */
-   #enquire .Option {
+   #payment .Option {
      display: flex;
      list-style-type: none;
      font-size: 1.2em;
@@ -770,18 +770,18 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
    }
 
    /* checkbox shape adjust */
-   #enquire .checkbox {
+   #payment .checkbox {
      height: 20px;
      width: 20px;
    }
 
    /* attribute selector to adjust all text inputs font size */
-   #enquire input [type="text"] {
+   #payment input [type="text"] {
      font-size: 2em;
    }
 
    /* Textarea   */
-   #enquire textarea {
+   #payment textarea {
      line-height: 10vh;
      width: 100%;
      padding: 4%;
@@ -789,30 +789,30 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
    }
 
    /* set font size for text area placeholder */
-   #enquire textarea::placeholder {
+   #payment textarea::placeholder {
      font-size: 1.4em;
    }
 
    /* Validation of entered value in input  */
-   /* #enquire input:not(:placeholder-shown):invalid {
+   /* #payment input:not(:placeholder-shown):invalid {
       border: 5px solid #ff0000;
     } */
 
    /* Submit button styling  */
-   #enquire .submit {
+   #payment .submit {
      text-align: center;
      margin-top: 5px;
    }
 
 
    /* submit button length adjust */
-   #enquire #submit {
+   #payment #submit {
      width: 20%;
    }
 
 
    /* hover effect for submit button */
-   #enquire #submit:hover {
+   #payment #submit:hover {
      transform: scale(1.2);
    }
 
@@ -1284,24 +1284,24 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
    }
  }
 
- #enquire .warning {
+ #payment .warning {
    background-color: pink !important;
    border: red solid 1px;
    text-align: center;
    margin-bottom: 2%;
  }
 
- #enquire .warning h2 {
+ #payment .warning h2 {
    border: none;
    padding-bottom: 0%;
  }
 
  /* Validation of entered value in input  */
- #enquire .invalid {
+ #payment .invalid {
    border: 4px solid #ff0000;
  }
 
- #enquire #comment {
+ #payment #comment {
    margin-top: 2%;
  }
 
