--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
  /*
 filename: styles.css
-author: Nguyen Ha Huy Hoang, Nguyen Duc Thinh, Nguyen Gia Binh
+author: Nguyen Ha Huy Hoang, Nguyen Duc Thinh, Nguyen Gia Binh,Nguyen Manh Duc
 created: 14/2/2023
 last modified: 1/3/2023
 description: product.php, index.php, payment.php, about.php, enhancements.php
