--- a/styles/styles.css
+++ b/styles/styles.css
@@ -715,6 +715,8 @@ description: product.php, index.php, payment.php, about.php, enhancements.php
    /* Preferred Card type */
    #payment .precon_label {
      padding-right: 2%;
+     display: flex;
+     align-items: center;
    }
 
    #payment .book {
@@ -1072,7 +1074,28 @@ description: product.php, index.php, payment.php, about.php, enhancements.php
      font-weight: bold;
      font-size: 120%;
 
+   }  
+
+   #about .team {
+    padding: 0% !important;
+    margin-bottom: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
    }
+
+   #about .team li {
+    font-size: 1.5em;
+    margin: 1%
+   }
+
+   #about .teamc {
+    height: auto !important;
+   }
+
+   
+   
 
    /*specific information*/
    #about .personaldetail dl {
@@ -1337,7 +1360,7 @@ description: product.php, index.php, payment.php, about.php, enhancements.php
 
  /* Validation of entered value in input  */
  #payment .invalid {
-   border: 4px solid #ff0000;
+   border: 2px solid #ff0000;
  }
 
  #payment #comment {
