--- a/styles/enhancements.css
+++ b/styles/enhancements.css
@@ -3,7 +3,7 @@ filename: enhancements.css
 author: Nguyen Ha Huy Hoang, Nguyen Duc Thinh, Nguyen Gia Binh, Nguyen Manh Duc
 created: 14/2/2023
 last modified: 1/3/2023
-description: product.html, index.html, enquire.html, about.html, enhancements.html
+description: product.html, index.html, payment.html, about.html, enhancements.html
 */
 
 
@@ -398,7 +398,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
 
 
   /* Form size and color   */
-  #enquire .form {
+  #payment .form {
     padding: 5%;
     background: #fff;
     width: 95%;
@@ -407,7 +407,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
       rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
   }
 
-  #enquire .form h2 {
+  #payment .form h2 {
     font-size: 2.5vw;
     text-align: center;
     font-weight: bold;
@@ -418,39 +418,39 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   }
 
   /* Contact us heading at the start   */
-  #enquire #heading {
+  #payment #heading {
     text-align: center;
     font: 5em Arial;
     margin: 0% 0% 5% 0%;
   }
 
   /* How to fieldset behave   */
-  #enquire fieldset {
+  #payment fieldset {
     padding: 0px;
   }
 
 /* Make the border representing fieldset dissapear   */
-  #enquire .part {
+  #payment .part {
     border-style: none;
   }
 
-  #enquire fieldset input {
+  #payment fieldset input {
     border-radius: 10px;
   }
 
 /* The text over each input is style here   */
-  #enquire .text_Float_left {
+  #payment .text_Float_left {
     float: left;
     font-size: 1.7em;
   }
 
 /* Increase font-size of placeholder   */
-  #enquire input::placeholder {
+  #payment input::placeholder {
     font-size: 1.4em;
   }
 
   /* Set the input field to look kinda opaque    */
-  #enquire .input_text {
+  #payment .input_text {
     opacity: 0.5;
     width: 100%;
     height: 100%;
@@ -460,7 +460,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
     font-size: 0.9em;
   }
 
-  #enquire .input_text_2 {
+  #payment .input_text_2 {
     opacity: 0.5;
     width: 100%;
     padding: 1.5em;
@@ -469,62 +469,62 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   }
 
 /* Table */
-#enquire table, th, td {
+#payment table, th, td {
   border: 1px solid black;
 }
 
- #enquire table th {
+ #payment table th {
   background-color: lightgrey;
  }
 
- #enquire table tr td {
+ #payment table tr td {
   height: 60px;
   padding:0.5%;
  }
 
- #enquire table .header_product_1 {
+ #payment table .header_product_1 {
   width:75%;
   font-size: 1.6em;
   
  }
 
- #enquire table .header_product_2 {
+ #payment table .header_product_2 {
   width:10%;
   font-size: 1.6em;
   
  }
 
- #enquire table .header_product_3 {
+ #payment table .header_product_3 {
   padding: 1%;
   width:14%;
   font-size: 1.5em;
   
  }
 
- #enquire .actual_product {
+ #payment .actual_product {
   font-size: 1.5em;
  }
 
- #enquire .actual_product_2 {
+ #payment .actual_product_2 {
   font-size: 1.2em;
   text-align: center;
  }
 
   /*2 equal collums*/
 
-  #enquire * {
+  #payment * {
     box-sizing: border-box;
   }
 
   /* Create two equal columns that floats next to each other */
-  #enquire .column {
+  #payment .column {
     float: left;
     width: 49%;
     margin: 1% 0% 1% 0%;
     text-align: center;
   }
 
-  #enquire .column2 {
+  #payment .column2 {
     float: left;
     width: 49%;
     margin: 1% 0% 1% 1.9%;
@@ -532,24 +532,24 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   }
 
   /* Clear floats after the columns */
-  #enquire .row_01:after {
+  #payment .row_01:after {
     content: "";
     display: table;
     clear: both;
   }
 
-  #enquire .row2 {
+  #payment .row2 {
     margin-bottom: 1%;
   }
 
-  #enquire .row2:after {
+  #payment .row2:after {
     content: "";
     display: table;
     clear: both;
   }
 
     /* State styling   */
-    #enquire #cAdr {
+    #payment #cAdr {
       width: 100%;
       padding: 1.5em;
       border-radius: 10px;
@@ -558,49 +558,49 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
     }
 
   /* Preferred Card type*/
-  #enquire .precon_label {
+  #payment .precon_label {
     display: flex;
     align-items: center;
     padding-right: 2%;
   }
 
   /* Changing radio size */
-  #enquire input[type="radio"] {
+  #payment input[type="radio"] {
     transform: scale(1.5);
   }
 
 /* Add display flex */
-  #enquire .flex {
+  #payment .flex {
     display: flex;
     flex-direction: column;
   }
 
  /* position adjustment for prefered Card */
-  #enquire .option_content {
+  #payment .option_content {
     display: flex;
     margin-top: 2%;
   }
 
   /* Book, preferred, order font styling    */
-  #enquire .choice_label {
+  #payment .choice_label {
     font-size: 1.7em;
   }
 
 /* adjust the position of the label content */
-  #enquire li label {
+  #payment li label {
     display: flex;
     align-items: center;
   }
 
   /* Choose order type styling   */
-  #enquire ul {
+  #payment ul {
     display: flex;
     margin: 2% 0% 0% 0%;
     padding: 0px;
   }
 
 /* checkbox option position settings */
-  #enquire .Option {
+  #payment .Option {
     display: flex;
     list-style-type: none;
     font-size: 1.2em;
@@ -608,13 +608,13 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   }
 
 /* checkbox shape adjust */
-  #enquire .checkbox {
+  #payment .checkbox {
     height: 15px;
     width: 15px;
   }
 
   /* Select Book   */
-  #enquire .book {
+  #payment .book {
     width: 98%;
     padding: 0.5em;
     border-radius: 10px;
@@ -623,40 +623,40 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   }
 
 /* attribute selector to adjust all text inputs font size */
-  #enquire input [type="text"] {
+  #payment input [type="text"] {
     font-size: 1.5em;
   }
 
     /* Textarea   */
-    #enquire textarea {
+    #payment textarea {
       line-height: 10vh;
       width: 100%;
       padding: 4%;
       font-size: 1.3em;
     }
 
-    #enquire textarea::placeholder {
+    #payment textarea::placeholder {
       font-size: 1.4em;
     }
 
          /* Validation of entered value in input  */
-         /* #enquire .input_text_2:not(:placeholder-shown):invalid {
+         /* #payment .input_text_2:not(:placeholder-shown):invalid {
           border: 5px solid #ff0000;
         } */
 
   /* Submit button styling  */
-  #enquire .submit {
+  #payment .submit {
     text-align: center;
     margin-top: 5px;
   }
 
 /* submit button length adjust */
-  #enquire #submit {
+  #payment #submit {
     width: 20%;
   }
 
 /* hover effect for submit button */
-  #enquire #submit:hover {
+  #payment #submit:hover {
     transform: scale(1.2);
   }
 
@@ -1512,7 +1512,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
 
 
   /* Form size and color   */
-  #enquire .form {
+  #payment .form {
     padding: 5%;
     background: #fff;
     width: 95%;
@@ -1521,7 +1521,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
       rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
   }
 
-  #enquire .form h2 {
+  #payment .form h2 {
     font-size: 2.5vw;
     text-align: center;
     font-weight: bold;
@@ -1532,39 +1532,39 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   }
 
   /* Contact us heading at the start   */
-  #enquire #heading {
+  #payment #heading {
     text-align: center;
     font: 5em Arial;
     margin: 0% 0% 5% 0%;
   }
 
   /* How to fieldset behave   */
-  #enquire fieldset {
+  #payment fieldset {
     padding: 0px;
   }
 
   /* Make the border representing fieldset dissapear   */
-  #enquire .part {
+  #payment .part {
     border-style: none;
   }
 
-  #enquire fieldset input {
+  #payment fieldset input {
     border-radius: 10px;
   }
 
   /* The text over each input is style here   */
-  #enquire .text_Float_left {
+  #payment .text_Float_left {
     float: left;
     font-size: 1.7em;
   }
 
   /* Increase font-size of placeholder   */
-  #enquire input::placeholder {
+  #payment input::placeholder {
     font-size: 1.4em;
   }
 
     /* Set the input field to look kinda opaque    */
-  #enquire .input_text {
+  #payment .input_text {
     opacity: 0.5;
     width: 100%;
     height: 100%;
@@ -1574,7 +1574,7 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
     font-size: 1.1em;
   }
 
-  #enquire .input_text_2 {
+  #payment .input_text_2 {
     opacity: 0.5;
     width: 100%;
     padding: 1.5em;
@@ -1583,43 +1583,43 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   }
 
 /* Table */
-#enquire table, th, td {
+#payment table, th, td {
   border: 1px solid black;
 }
 
- #enquire table th {
+ #payment table th {
   background-color: lightgrey;
  }
 
- #enquire table tr td {
+ #payment table tr td {
   height: 50px;
  }
 
- #enquire table .header_product_1 {
+ #payment table .header_product_1 {
   width:75%;
   font-size: 1em;
   
  }
 
- #enquire table .header_product_2 {
+ #payment table .header_product_2 {
   width:10%;
   font-size: 1em;
   
  }
 
- #enquire table .header_product_3 {
+ #payment table .header_product_3 {
   padding: 1%;
   width:14%;
   font-size: 1em;
   
  }
 
- #enquire .actual_product {
+ #payment .actual_product {
   font-size: 1em;
   padding: 1%;
  }
 
- #enquire .actual_product_2 {
+ #payment .actual_product_2 {
   font-size: 0.8em;
   text-align: center;
  }
@@ -1627,19 +1627,19 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
                                                   
   /*2 equal collums*/
 
-  #enquire * {
+  #payment * {
     box-sizing: border-box;
   }
 
   /* Create two equal columns that floats next to each other */
-  #enquire .column {
+  #payment .column {
     float: left;
     width: 98%;
     margin: 1% 0% 1% 0%;
     text-align: center;
   }
 
-  #enquire .column2 {
+  #payment .column2 {
     float: left;
     width: 99%;
     margin: 1% 0% 1% 0%;
@@ -1647,24 +1647,24 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   }
 
   /* Clear floats after the columns */
-  #enquire .row_01:after {
+  #payment .row_01:after {
     content: "";
     display: table;
     clear: both;
   }
 
-  #enquire .row2 {
+  #payment .row2 {
     margin-bottom: 1%;
   }
 
-  #enquire .row2:after {
+  #payment .row2:after {
     content: "";
     display: table;
     clear: both;
   }
 
     /* State styling   */
-    #enquire #cAdr {
+    #payment #cAdr {
       width: 100%;
       padding: 1.5em;
       border-radius: 10px;
@@ -1673,50 +1673,50 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
     }
 
   /* Preferred Card type */
-  #enquire .precon_label {
+  #payment .precon_label {
     display: flex;
     align-items: center;
     padding-right: 2%;
   }
 
   /* Changing radio size */
-  #enquire input[type="radio"] {
+  #payment input[type="radio"] {
     transform: scale(1);
   }
 
   /* Add display flex */
-  #enquire .flex {
+  #payment .flex {
     display: flex;
     flex-direction: column;
   }
 
   /* position adjustment for prefered Card */
-  #enquire .option_content {
+  #payment .option_content {
     display: flex;
     margin-top: 2%;
   }
 
   /* Book, preferred, order font styling    */
-  #enquire .choice_label {
+  #payment .choice_label {
     font-size: 1.7em;
   }
 
 
 /* adjust the position of the label content */
-  #enquire li label {
+  #payment li label {
     display: flex;
     align-items: center;
   }
 
   /* Choose order type styling   */
-  #enquire ul {
+  #payment ul {
     display: flex;
     margin: 2% 0% 0% 0%;
     padding: 0px;
   }
 
 /* checkbox option position settings */
-  #enquire .Option {
+  #payment .Option {
     display: flex;
     list-style-type: none;
     font-size: 1.2em;
@@ -1724,17 +1724,17 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
   }
 
 /* checkbox shape adjust */
-  #enquire .checkbox {
+  #payment .checkbox {
     height: 10px;
     width: 10px;
   }
 
 /* attribute selector to adjust all text inputs font size */
-  #enquire input [type="text"] {
+  #payment input [type="text"] {
     font-size: 1.5em;
   }
 
-  #enquire .book {
+  #payment .book {
     width: 98%;
     padding: 0.3em;
     border-radius: 10px;
@@ -1743,40 +1743,40 @@ description: product.html, index.html, enquire.html, about.html, enhancements.ht
     
   }
 
-  #enquire select option {
+  #payment select option {
     font-size: 1em;;
   }
 
   /* Textarea   */
-  #enquire textarea {
+  #payment textarea {
     line-height: 10vh;
     width: 100%;
     padding: 4%;
     font-size: 1.3em;
   }
 
-  #enquire textarea::placeholder {
+  #payment textarea::placeholder {
     font-size: 1.4em;
   }
 
        /* Validation of entered value in input  */
-       /* #enquire .input_text_2:not(:placeholder-shown):invalid {
+       /* #payment .input_text_2:not(:placeholder-shown):invalid {
         border: 5px solid #ff0000;
       } */
 
   /* Submit button styling  */
-  #enquire .submit {
+  #payment .submit {
     text-align: center;
     margin-top: 5px;
   }
 
 /* submit button length adjust */
-  #enquire #submit {
+  #payment #submit {
     width: 20%;
   }
 
 /* hover effect for submit button */
-  #enquire #submit:hover {
+  #payment #submit:hover {
     transform: scale(1.2);
   }
 
