delete table for in-house rule

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -626,52 +626,6 @@ description: product.php, index.php, payment.php, about.php, enhancements.php
      margin-left: 4%;
    }
 
-
-
-   /* Testing table */
-   #payment table,
-   #payment th,
-   #payment td {
-     border: 1px solid black;
-   }
-
-   #payment table th {
-     background-color: lightgrey;
-   }
-
-   #payment table tr td {
-     height: 90px;
-     padding: 1%;
-   }
-
-   #payment table .header_product_1 {
-     width: 75%;
-     font-size: 2em;
-
-   }
-
-   #payment table .header_product_2 {
-     width: 10%;
-     font-size: 2em;
-
-   }
-
-   #payment table .header_product_3 {
-     width: 14%;
-     font-size: 2em;
-     padding: 1%;
-
-   }
-
-   #payment .actual_product {
-     font-size: 1.5em;
-   }
-
-   #payment .actual_product_2 {
-     font-size: 1.5em;
-     text-align: center;
-   }
-
    /*2 equal collums*/
 
    #payment * {
@@ -728,7 +682,7 @@ description: product.php, index.php, payment.php, about.php, enhancements.php
 
    }
 
-   #payment .select_test {
+   #payment .select_text {
      width: 100%;
    }
 
@@ -798,11 +752,6 @@ description: product.php, index.php, payment.php, about.php, enhancements.php
    #payment textarea::placeholder {
      font-size: 1.4em;
    }
-
-   /* Validation of entered value in input  */
-   /* #payment input:not(:placeholder-shown):invalid {
-      border: 5px solid #ff0000;
-    } */
 
    /* Submit button styling  */
    #payment .submit {
